--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm install && tsc",
-    "start": "node dist/index.js"
+    "build": "npm install",
+    "start": "tsc && node dist/index.js",
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
+    "concurrently": "^8.2.2",
     "typescript": "^5.2.2"
   }
 }
